--- a/index.html
+++ b/index.html
@@ -68,14 +68,16 @@
             font-size: 1.1rem;
         }
 
-        .jamb-logo {
+        jamb-logo {
             position: absolute;
             top: 15px;
             left: 20px;
-            font-size: 1.8rem;
+            font-size: 70px;
             font-weight: bold;
-        }
-
+            z-index: 1;
+            padding-right: 10px;
+       }
+       
         .timer-container {
             position: absolute;
             top: 20px;
